# docdd-starters

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/backend/app/: dependencies.py  main.py
apps/backend/app/contracts/: README.md
apps/backend/app/contracts/dto/: README.md
apps/backend/app/contracts/errors/: README.md
apps/backend/app/contracts/events/: README.md
apps/backend/app/core/: __init__.py  config.py  logging.py
apps/backend/app/infrastructure/: README.md
apps/backend/app/infrastructure/adapters/: README.md
apps/backend/app/infrastructure/auth/: README.md
apps/backend/app/infrastructure/database/: __init__.py
apps/backend/app/kernel/: README.md  __init__.py  app.py  module_loader.py  router.py
apps/backend/app/middlewares/: README.md
apps/backend/app/modules/: __init__.py
apps/backend/app/modules/example/: README.md  __init__.py  manifest.py
apps/backend/app/modules/example/api/: __init__.py  routes.py
apps/backend/app/modules/example/domain/: README.md
apps/backend/app/modules/example/repositories/: README.md
apps/backend/app/modules/example/schemas/: __init__.py  ping.py
apps/backend/app/modules/example/services/: __init__.py  example_service.py
apps/backend/app/modules/example/tests/: __init__.py  test_routes.py
apps/backend/app/shared/: __init__.py
apps/backend/app/tests/: __init__.py  test_app_bootstrap.py
docs/: README.md  ci.md
scripts/: README.md
(+80 files in other folders)
